feat: improve manager file type
[wip]

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -30,5 +30,8 @@ entityPackage=infrastructure/entity
 
 projectionPackage=presentation/projection
 controllerPackage=presentation/controller
-
+sharedPackage=shared
 testPackage=target/test/main/java
+
+domainUseCasePackage=domain/usecase
+applicationUseCasePackage=application/usecase
