--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ controllerPackage=presentation/controller
 
 testPackage=tests
 sharedPackage=shared
+
+domainUseCasePackage=domain/usecase
+applicationUseCasePackage=application/usecase
