feat: add modules security
[wip]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ sharedPackage=shared
 
 domainUseCasePackage=domain/usecase
 applicationUseCasePackage=application/usecase
+
+securityPackage=security
+configPackage=infrastructure/config
