feat: reset password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=code-generator
-rewrite=false
+#rewrite=false
 
 server.port=8071
 entityName=com.groupe2cs.generator.entity.MockEntity
