[feat] add multi tenant

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,5 +37,7 @@ sharedPackage=shared
 domainUseCasePackage=domain/usecase
 applicationUseCasePackage=application/usecase
 
-securityPackage=security
 configPackage=infrastructure/config
+
+securityPackage=security
+tenantPackage=tenant
