bugfix: fix password api key

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=code-generator
-rewrite=false
+#rewrite=false
+#force=true
 
 server.port=8071
 entityName=com.groupe2cs.generator.entity.MockEntity
@@ -41,3 +42,4 @@ configPackage=infrastructure/config
 
 securityPackage=security
 tenantPackage=tenant
+
