[wip] add view files

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -35,3 +35,5 @@ testPackage=target/test/main/java
 
 domainUseCasePackage=domain/usecase
 applicationUseCasePackage=application/usecase
+
+fileManagerPackage=fileManager
