--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,4 +42,6 @@ configPackage=infrastructure/config
 
 securityPackage=security
 tenantPackage=tenant
+fileManagerPackage=fileManager
 
+app.file.uri=http://localhost:8095/api/v1/files
